src/objects/SV_Log__c.object
<CustomObject>
    <fields>
        <fullName>AccountID__c</fullName>
        <label>AccountID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_Payload__c</fullName>
        <label>Input Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Output_Payload__c</fullName>
        <label>Output Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Retry_Attempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retry Attempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Source__c</columns>
        <columns>Success__c</columns>
        <columns>AccountID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>11/6/2020 8:59 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Log_Error</fullName>
        <columns>NAME</columns>
        <columns>AccountID__c</columns>
        <columns>Source__c</columns>
        <columns>Retry_Attempt__c</columns>
        <columns>Status__c</columns>
        <columns>Output_Payload__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Success__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>11/1/2020 12:15 AM</value>
        </filters>
        <label>Log Error</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>